# sentimentizer

./: .coverage  .gitignore  .gitmodules  Dockerfile  LICENSE  MANIFEST.in  README.md  embedding.ipynb  environment.yml  gensim_walkthrough.ipynb  go.mod  go.sum  main.go  output  polars.stats  pyproject.toml  serve.py  setup.py
.github/workflows/: ci.yaml  github-actions.yaml  run-tests.yaml
.ipynb_checkpoints/: Modern_NLP_in_Python-checkpoint.ipynb  embedding-checkpoint.ipynb  gensim_walkthrough-checkpoint.ipynb
golang/: golang  main  main.go
golang/parser/: parser.go
k8s/: README.md  deployment.yaml  service.yaml
notebook/: Modern_NLP_in_Python .ipynb  Untitled.ipynb  gensim_walkthrough.ipynb  phrase modeling test.ipynb  torch-Copy1.ipynb  torch-sentiment-Copy1.ipynb  torch-sentiment-refactor.ipynb  torch_transformer.ipynb
sentimentizer/: config.py  extractor.py  loader.py  tokenizer.py  trainer.py
sentimentizer/models/: decoder.py  encoder.py  rnn.py
src/code/: data.py
src/notebook/: Untitled.ipynb  embedding.ipynb  embedding_and_bow.ipynb  torch-sentiment.ipynb  torch.ipynb
src/notebook/.ipynb_checkpoints/: embedding-Copy1-checkpoint.ipynb  embedding-checkpoint.ipynb  embedding_and_bow-checkpoint.ipynb  torch-checkpoint.ipynb
tests/: conftest.py  test_rnn.py
tests/test_data/file.parquet/: 2_e42ba57b7d51426988a4216eda87ceac_000000_000000-0.parquet
torch_sentiment/: __init__.py  config.py  extractor.py  loader.py  logging_utils.py  tokenizer.py  trainer.py
torch_sentiment.egg-info/: PKG-INFO
torch_sentiment/data/: .gitignore  weights.pt  weights.pth  yelp.dictionary  yelp_data.dictionary
torch_sentiment/models/: decoder.py  encoder.py  rnn.py
torch_sentiment/rnn/: config.py  driver.py  extractor.py  loader.py  model.py  tokenizer.py  trainer.py  transformer.py
torch_sentiment/tests/: conftest.py  test_rnn.py
torch_sentiment/torch_sentiment.egg-info/: PKG-INFO
torch_sentiment/transformer/: model.py
torch_sentiment/workflows/: driver.py  encoder_runner.py
workflows/: driver.py  encoder_runner.py
yelp_nlp/: __init__.py  logging_utils.py
yelp_nlp.egg-info/: PKG-INFO
yelp_nlp/code/: data.py
yelp_nlp/rnn/: config.py  data.py  driver.py  extracter.py  extractor.py  loader.py  model.py  runner.py  test.py  train.py  trainer_config.py  transformer.py
yelp_nlp/test/: test_convert_rating.py
yelp_nlp/tests/: test_convert_rating.py  test_data.py  test_data_module.py  test_rnn.py
yelp_nlp/tests/test_data/: artificial-reviews.jsonl
