# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torch_sentiment"
version = "0.4.44"
description = "straight forward rnn model"
readme = "README.md"
authors = [{ name = "Edward Yang", email = "edwardpyang@gmail.com" }]
#license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

keywords = ["rnn", "pytorch", "tutorial"]
dependencies = [
        "numpy >= 1.24.0",
        "polars >= 0.15.16",
        "pandas >= 1.5.2",
        "torch >= 1.13.1",
        "scikit-learn",
        "jsonlines",
        "gensim",
        "structlog",
        "psutil",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.scripts]
train = "torch_sentiment.workflows.driver:main"