[build-system]
requires      = ["setuptools>=61.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentimentizer"
version = "0.6.5"
description = "straight forward rnn model"
readme = "README.md"
authors = [{ name = "Edward Yang", email = "edwardpyang@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python"
]

keywords = ["rnn", "pytorch", "nlp", "sentiment"]
dependencies = [
        "numpy >= 1.23.0",
        "pandas >= 1.5.2",
        "polars >= 1.27.1",
        "torch >= 2.10",
        "orjson >= 3.8.5",
        "pyarrow >= 11.0.0",
        "attrs >= 22.2.0",
        "scikit-learn",
        "gensim",
        "structlog",
        "psutil",
        "ray[serve] >= 2.5.0"
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]
